--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
@@ -80,8 +83,39 @@
         </div>
       </div>
     </header>
+    <div class="banner-wrapper">
+      <div class="owl-carousel">
+        <div class="banner-item-wrapper">
+          <div class="banner-item-picture">
+            <img src="css/content-pictures/banner.png" alt="banner-img">
+          </div>
+          <div class="banner-item container">1</div>
+        </div>
+        <div class="banner-item-wrapper">
+          <div class="banner-item-picture">
+            <img src="css/content-pictures/banner.png" alt="banner-img">
+          </div>
+          <div class="banner-item container">2</div>
+        </div>
+        <div class="banner-item-wrapper">
+          <div class="banner-item-picture">
+            <img src="css/content-pictures/banner.png" alt="banner-img">
+          </div>
+          <div class="banner-item container">1</div>
+        </div>
+        <div class="banner-item-wrapper">
+          <div class="banner-item-picture">
+            <img src="css/content-pictures/banner.png" alt="banner-img">
+          </div>
+          <div class="banner-item container">2</div>
+        </div>
+      </div>
+      <div class="banner-dots"></div>
+    </div>
   </div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
