--- a/index.html
+++ b/index.html
@@ -84,33 +84,111 @@
       </div>
     </header>
     <div class="banner-wrapper">
-      <div class="owl-carousel">
-        <div class="banner-item-wrapper">
-          <div class="banner-item-picture">
-            <img src="css/content-pictures/banner.png" alt="banner-img">
+      <div class="banner container">
+        <div class="owl-carousel">
+          <div class="banner-item-wrapper">
+            <div class="banner-item-picture">
+              <img src="css/content-pictures/banner.png" alt="banner-img">
+            </div>
+            <div class="banner-item">
+              <a href="#" class="banner-link">
+                <span>watch now</span>
+              </a>
+            </div>
           </div>
-          <div class="banner-item container">1</div>
+          <div class="banner-item-wrapper">
+            <div class="banner-item-picture">
+              <img src="css/content-pictures/banner.png" alt="banner-img">
+            </div>
+            <div class="banner-item">
+              <a href="#" class="banner-link">
+                <span>watch now</span>
+              </a>
+            </div>
+          </div>
+          <div class="banner-item-wrapper">
+            <div class="banner-item-picture">
+              <img src="css/content-pictures/banner.png" alt="banner-img">
+            </div>
+            <div class="banner-item">
+              <a href="#" class="banner-link">
+                <span>watch now</span>
+              </a>
+            </div>
+          </div>
+          <div class="banner-item-wrapper">
+            <div class="banner-item-picture">
+              <img src="css/content-pictures/banner.png" alt="banner-img">
+            </div>
+            <div class="banner-item">
+              <a href="#" class="banner-link">
+                <span>watch now</span>
+              </a>
+            </div>
+          </div>
         </div>
-        <div class="banner-item-wrapper">
-          <div class="banner-item-picture">
-            <img src="css/content-pictures/banner.png" alt="banner-img">
+        <div class="banner-dots-wrapper">
+          <div class="banner-dots">
+            <button role="button" class="owl-dot active">
+              <span></span>
+              <div class="actor">
+                <img src="css/content-pictures/actor.png" alt="actor" class="actor-pic">
+                <span class="actor-name">James Gunn</span>
+              </div>
+            </button>
+            <button role="button" class="owl-dot">
+              <span></span>
+              <div class="actor">
+                <img src="css/content-pictures/actor.png" alt="actor" class="actor-pic">
+                <span class="actor-name">James Gunn</span>
+              </div>
+            </button>
+            <button role="button" class="owl-dot">
+              <span></span>
+              <div class="actor">
+                <img src="css/content-pictures/actor.png" alt="actor" class="actor-pic">
+                <span class="actor-name">James Gunn</span>
+              </div>
+            </button>
+            <button role="button" class="owl-dot">
+              <span></span>
+              <div class="actor">
+                <img src="css/content-pictures/actor.png" alt="actor" class="actor-pic">
+                <span class="actor-name">James Gunn</span>
+              </div>
+            </button>
           </div>
-          <div class="banner-item container">2</div>
-        </div>
-        <div class="banner-item-wrapper">
-          <div class="banner-item-picture">
-            <img src="css/content-pictures/banner.png" alt="banner-img">
-          </div>
-          <div class="banner-item container">1</div>
-        </div>
-        <div class="banner-item-wrapper">
-          <div class="banner-item-picture">
-            <img src="css/content-pictures/banner.png" alt="banner-img">
-          </div>
-          <div class="banner-item container">2</div>
         </div>
       </div>
-      <div class="banner-dots"></div>
+      <div class="banner-info-wrapper">
+        <div class="banner-info container">
+          <div class="published-container">published
+            <span class="published-date">feb 20, 2014</span>
+          </div>
+          <div class="updated-container">updated
+            <span class="updated-date">feb 20, 2014</span>
+          </div>
+          <div class="rating-container">rating
+            <div class="stars">
+              <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
+              <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
+              <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
+              <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
+              <span><img src="css/icons/star-no.svg" alt="rating-star"></span>
+            </div>
+          </div>
+          <div class="likes-container">
+            <span class="likes-amount">2.548</span>
+          </div>
+          <div class="comments-container">
+            <span class="comments-amount">21</span>
+          </div>
+          <div class="downloads-container">
+            <span class="downloads-amount">564</span>
+          </div>
+        </div>
+        <div class="banner-sk"></div>
+      </div>
     </div>
   </div>
 
