--- a/index.html
+++ b/index.html
@@ -162,29 +162,33 @@
       </div>
       <div class="banner-info-wrapper">
         <div class="banner-info container">
-          <div class="published-container">published
-            <span class="published-date">feb 20, 2014</span>
-          </div>
-          <div class="updated-container">updated
-            <span class="updated-date">feb 20, 2014</span>
-          </div>
-          <div class="rating-container">rating
-            <div class="stars">
-              <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
-              <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
-              <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
-              <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
-              <span><img src="css/icons/star-no.svg" alt="rating-star"></span>
+          <div class="banner-info-date">
+            <div class="published-container">published
+              <span class="published-date">feb 20, 2014</span>
+            </div>
+            <div class="updated-container">updated
+              <span class="updated-date">feb 20, 2014</span>
+            </div>
+            <div class="rating-container">rating
+              <div class="stars">
+                <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
+                <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
+                <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
+                <span><img src="css/icons/star-done.svg" alt="rating-star"></span>
+                <span><img src="css/icons/star-no.svg" alt="rating-star"></span>
+              </div>
             </div>
           </div>
-          <div class="likes-container">
-            <span class="likes-amount">2.548</span>
-          </div>
-          <div class="comments-container">
-            <span class="comments-amount">21</span>
-          </div>
-          <div class="downloads-container">
-            <span class="downloads-amount">564</span>
+          <div class="banner-info-likes">
+            <div class="likes-container">
+              <span class="likes-amount">2.548</span>
+            </div>
+            <div class="comments-container">
+              <span class="comments-amount">21</span>
+            </div>
+            <div class="downloads-container">
+              <span class="downloads-amount">564</span>
+            </div>
           </div>
         </div>
         <div class="banner-sk"></div>
