--- a/index.html
+++ b/index.html
@@ -194,10 +194,38 @@
         <div class="banner-sk"></div>
       </div>
     </div>
+    <div class="movies-wrapper">
+      <div class="movies container">
+        <div class="movies-header">
+          <div class="search-wrapper">
+            <div class="search-caption">
+              <h5>featured movies</h5>
+            </div>
+          </div>
+          <div class="sorting-wrapper">
+            <ul>
+              <li>
+                <a href="#">New Realised</a>
+              </li>
+              <li>
+                <a href="#">Trailers & Clips</a>
+              </li>
+            </ul>
+          </div>
+          <div class="input-search-wrapper">
+            <input type="text" name="search" class="input-search" placeholder="Search...">
+            <input type="button" class="button-search">
+          </div>
+        </div>
+        <div class="movies-grid">a</div>
+      </div>
+    </div>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.1/masonry.pkgd.min.js"></script>
+
   <script src="js/main.js"></script>
 </body>
 </html>
