--- a/index.html
+++ b/index.html
@@ -217,7 +217,41 @@
             <input type="button" class="button-search">
           </div>
         </div>
-        <div class="movies-grid">a</div>
+        <div class="movies-grid">
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/207x189/000/fff" alt="">
+          </div>
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/207x400/000/fff" alt="">
+          </div>
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/207x189/000/fff" alt="">
+          </div>
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/207x189/000/fff" alt="">
+          </div>
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/207x189/000/fff" alt="">
+          </div>
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/207x189/000/fff" alt="">
+          </div>
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/437x189/000/fff" alt="">
+          </div>
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/207x397/000/fff" alt="">
+          </div>
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/438x154/000/fff" alt="">
+          </div>
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/207x154/000/fff" alt="">
+          </div>
+          <div class="movies-grid-item">
+            <img src="https://dummyimage.com/207x154/000/fff" alt="">
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -225,6 +259,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.1/masonry.pkgd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
 
   <script src="js/main.js"></script>
 </body>
